Synchronization
git-svn-id: https://rapidminer.svn.sourceforge.net/svnroot/rapidminer/Unuk@762 d8dd750e-dc89-4b37-8fed-34212cb4890a